[package]
name = "big_prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = {version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
num-iter = "0.1.43"
num = "0.4.0"
modexp = "0.2.2"
